--- a/guide-demo/package.json
+++ b/guide-demo/package.json
@@ -9,23 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.6",
+    "@apollo/client": "^3.6.9",
+    "@fontsource/jost": "^4.5.10",
+    "@fontsource/roboto": "^4.5.7",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
-    "next": "12.1.6",
+    "next": "^12.2.2",
     "next-mdx-remote": "^4.0.3",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.33",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
+    "tailwindcss": "^3.1.6",
+    "typescript": "4.7.4"
   }
 }
